--- a/ACNinjaAPI/Views/Home/Index.cshtml
+++ b/ACNinjaAPI/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="~/favicon.ico">
+    <link rel="icon" type="image/png" href="~/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>
         Moses Financial Portal API
@@ -69,11 +69,11 @@
                                 <li>
                                     <a href="https://mosesprofile.azurewebsites.net/" target="_blank">My Portfolio</a>
                                 </li>
-                                <li>
+                                @*<li>
                                     <a href="https://mwangiblog2.azurewebsites.net/" target="_blank">My Blog</a>
-                                </li>
+                                </li>*@
                                 <li>
-                                    <a href="https://acnbugtracker.azurewebsites.net" target="_blank">ACN BugTracker</a>
+                                    <a href="https://acnbugtracker12.azurewebsites.net/" target="_blank">ACN BugTracker</a>
                                 </li>
                             </ul>
                         </nav>
